--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     compile 'com.zhy:base-adapter:3.0.2'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'com.facebook.fresco:fresco:0.9.0+'
-    compile 'com.github.aercanozcan:Progressive:v1.0.1+'
+    compile 'com.github.aercanozcan:Progressive:v1.0.1'
     compile 'com.kymjs.rxvolley:rxvolley:1.0.7'
     compile 'com.jaredrummler:material-spinner:1.1.0'
     compile 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
