--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
     <application
         android:name=".application.App"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -46,10 +46,6 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name=".ui.activity.MyNewsActivity"
-            android:label="@string/title_activity_news"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".ui.activity.RichTextNewsActivity"
             android:label="@string/title_activity_news"
             android:theme="@style/AppTheme" />
         <activity
@@ -80,6 +76,15 @@
         <service android:name=".ui.service.DownloadService" />
 
         <activity android:name=".ui.activity.AppIntroduceActivity" />
+
+        <receiver android:name=".ui.service.DownloadReceiver">
+            <intent-filter>
+                <action android:name="action_download_update" />
+            </intent-filter>
+        </receiver>
+
+        <activity android:name=".ui.activity.NotifyActivity" />
+        <activity android:name=".ui.activity.NotifyContentActivity"></activity>
     </application>
 
 </manifest>
