--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.csmy.minyuanplus.application.App"
         minSdkVersion 16
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 24
+        versionCode 2
+        versionName "1.1"
         multiDexEnabled true
     }
     buildTypes {
@@ -20,34 +20,46 @@ android {
     }
 
 
+
+
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
+
+
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile files('libs/jsoup-1.9.2.jar')
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile files('libs/BmobStat_v1.0_0929.jar')
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
     compile 'com.zhy:okhttputils:2.5.1'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'me.majiajie:pager-bottom-tab-strip:1.0.0'
     compile 'org.litepal.android:core:1.3.2'
-    compile 'com.android.support:support-v4:23.4.0'
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.github.dongjunkun:DropDownMenu:1.0.3'
     compile 'com.zhy:base-rvadapter:3.0.2'
     compile 'com.zhy:autolayout:1.4.3'
-    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.google.android.gms:play-services-appindexing:9.6.1'
     compile 'com.orhanobut:logger:1.15'
     compile 'com.loopeer.library:cardstack:1.0.1'
-    compile 'com.google.code.gson:gson:2.3.1+'
+    compile 'com.google.code.gson:gson:2.4'
     compile 'com.zhy:base-adapter:3.0.2'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
-    compile 'com.facebook.fresco:fresco:0.9.0+'
+    compile 'com.facebook.fresco:fresco:0.13.0'
     compile 'com.github.aercanozcan:Progressive:v1.0.1'
-    compile 'com.kymjs.rxvolley:rxvolley:1.0.7'
+    compile 'com.kymjs.rxvolley:rxvolley:1.1.0'
     compile 'com.jaredrummler:material-spinner:1.1.0'
     compile 'com.github.rahatarmanahmed:circularprogressview:2.5.0'
     compile 'com.zzhoujay.richtext:richtext:2.0.9'
+    compile 'com.zzhoujay.materialcolors:materialcolors:1.0.0'
 }
